--- a/contato.html
+++ b/contato.html
@@ -75,10 +75,10 @@
         <a class="nav-link" href="eventos.html">Eventos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Cursos</a>
+        <a class="nav-link" href="infra.html">Cursos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Vestibulinho</a>
+        <a class="nav-link" href="vest.html">Vestibulinho</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href="contato.html">Contato<span class="sr-only"> (current)</span></a>
